--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,27 @@
-langchain-google-genai
-langchain-pinecone
-langchain-community
-langgraph
-pinecone-client>=3.2.2,<4.0.0
+# langchain-google-genai
+# langchain-pinecone
+# langchain-community
+# langgraph
+# pinecone-client>=3.2.2,<4.0.0
+# python-telegram-bot==21.0
+# python-dotenv==1.0.1
+# pypdf==4.2.0
+# tavily-python==0.3.1
+# pygithub==2.2.0
+# flask==3.0.3 
+
+
+langchain-google-genai==1.1.0
+langchain-pinecone==0.2.13
+langchain-community==0.4.1 
+langgraph==1.0.4
+pinecone-client==3.2.2
 python-telegram-bot==21.0
 python-dotenv==1.0.1
 pypdf==4.2.0
 tavily-python==0.3.1
 pygithub==2.2.0
-flask==3.0.3 
+flask==3.0.3
+
+# --- RENDER PRODUCTION SERVER ---
+gunicorn==22.0.0
